--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ nav li:first-child {
 }
 
 
-/* galerry */
+/* galery */
 @keyframes marquee {
   0% {
       transform: translateX(0);
@@ -331,19 +331,34 @@ font-size: 14px;
 color: #3D5300;
 }
 
+.card .footerCard {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.card .priceTotal {
+  color: #ffffff;
+  background-color: #31511E;
+  font-weight: bold;
+  font-size: 20px;
+}
+
 .card .checkOut {
-background-color: #3D5300;
-width: 40%;
-color: #ffffff;
-padding: 25px;
-text-align: center;
-font-weight: bold;
-cursor: pointer;
-transition: background-color 0.3s;
+  background-color: rgb(215, 68, 68);
+  width: 40%;
+  color: white;
+  height: 56px;
+  padding: 15px;
+  text-align: center;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .card .billing {
-background-color: salmon;
+background-color: rgb(55, 148, 15);
 width: 40%;
 color: white;
 height: 56px;
@@ -355,12 +370,12 @@ transition: background-color 0.3s;
 }
 
 .card .checkOut:hover {
-background-color: #78aa5b;
+background-color: #670404;
 border-radius: 10px;
 }
 
 .card .billing:hover{
-background-color: rgb(162, 65, 132);
+background-color: rgb(20, 67, 9);
 border-radius: 10px;
 }
 /* Popup Billing Styling */
