--- a/style.css
+++ b/style.css
@@ -345,39 +345,37 @@ color: #3D5300;
   font-size: 20px;
 }
 
-.card .checkOut {
-  background-color: rgb(215, 68, 68);
-  width: 40%;
-  color: white;
-  height: 56px;
-  padding: 15px;
-  text-align: center;
-  font-weight: bold;
+.card .checkOut, .card .billing {
+  width: 100%; 
+  height: 56px; 
+  padding: 12px 16px; 
+  font-weight: lighter; 
   cursor: pointer;
+  text-align: center;
+  border-radius: 8px; 
   transition: background-color 0.3s;
 }
 
+.card .checkOut:hover, .card .billing:hover {
+  border-radius: 10px; 
+}
+
+.card .checkOut {
+  background-color: rgb(215, 68, 68);
+}
+
 .card .billing {
-background-color: rgb(55, 148, 15);
-width: 40%;
-color: white;
-height: 56px;
-padding: 15px;
-text-align: center;
-font-weight: bold;
-cursor: pointer;
-transition: background-color 0.3s;
+  background-color: rgb(55, 148, 15);
 }
 
 .card .checkOut:hover {
-background-color: #670404;
-border-radius: 10px;
+  background-color: #670404;
 }
 
-.card .billing:hover{
-background-color: rgb(20, 67, 9);
-border-radius: 10px;
+.card .billing:hover {
+  background-color: rgb(20, 67, 9);
 }
+
 /* Popup Billing Styling */
 .popup-billing {
   position: fixed;
@@ -595,26 +593,14 @@ margin-bottom: 40px;
   max-width: 100%;
 }
 
-.card .checkOut {
-  background-color: #3D5300;
-  width: 40%;
-  color: #ffffff;
-  padding: 25px;
-  height: 85px;
-  text-align: center;
-  font-weight: bold;
+.card .checkOut, .card .billing {
+  width: 100%; 
+  height: 56px; 
+  padding: 12px 16px; 
+  font-weight: lighter; 
   cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.card .billing {
-  background-color: salmon;
-  width: 40%;
-  color: #ffffff;
-  padding: 25px;
   text-align: center;
-  font-weight: bold;
-  cursor: pointer;
+  border-radius: 8px; 
   transition: background-color 0.3s;
 }
 }
