--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   
 }
 
 
 /* Navigasi */
 nav {
-  background-color: #1a2e05;
+  background-color: #e2dfca;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
   z-index: 100;
   color: black;
@@ -44,6 +44,7 @@ nav ul {
 
 nav li {
   height: 50px;
+
 }
 
 nav a {
@@ -52,11 +53,11 @@ nav a {
   text-decoration: none;
   display: flex;
   align-items: center;
-  color: black;
+  color: #393716;
 }
 
 nav a:hover {
-  background-color: #f0f0f0;
+  background-color: #c3c9a9;
 }
 
 nav li:first-child {
